# takt

./: .gitignore  LICENSE  Makefile  README.md  index.html  main.py  pyproject.toml  requirements-dev.txt  takt.py
.github/: FUNDING.yml
.github/workflows/: go-ci.yml  go-release.yml
go/: Makefile  go.mod  main.go  main_test.go  test.csv
go/data/: test.csv
tests/: takt_test.py
