[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "takt"
version = "2023.11.02dev1"
authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["rich", "typer", "pandas"]
license = {file = "LICENSE"}
description = "Takt is a CLI tool for tracking time."


[project.scripts]
takt = "takt:app"
